--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lib"
   ],
   "scripts": {
-    "build": "babel -o lib src",
+    "build": "babel --out-dir lib src",
     "test": "jest --coverage",
     "precommit": "lint-staged",
     "prepublish": "yarn test && yarn run build"
